# bookstore-django

./: makefile  pyproject.toml
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_author.py  0003_rename_publishing_company_publishingcompany_book.py  0004_book_authors.py  0005_client_order.py  0006_remove_order_books_orderitem.py  0007_alter_order_client_delete_client.py
core/views/: __init__.py  author_view.py  book_view.py  category_view.py  order_view.py  publishing_company_view.py
livraria/: __init__.py  settings.py  urls.py
